# amora

./: .gitignore  LICENSE  README.md  requirements.txt
docs/: Makefile  make.bat
docs/source/: OpenCV.rst  batteries.rst  cameras.rst  computer.rst  conf.py  gps.rst  imu.rst  index.rst  os.rst  p2os.rst  ros.rst
festival/: install-sh
fsm/: .gitignore  CMakeLists.txt  CMakeLists.txt~  fsm.launch  package.xml
fsm/cmake/: FindCurses.cmake  FindFestival.cmake  FindPocketSphinx.cmake  FindSpeechtools.cmake  FindSphinxBase.cmake
fsm/data/model/: answer.txt  command.sent  corpus.txt  language_model.lm  log.log_pronounce  phonetic_dictionary.dic  vocabulary.vocab
fsm/include/: class_fsm.h  continuous.h  filters.h  fsm.h
fsm/launch/: fsm.launch
fsm/src/: class_fsm.cpp  continuous.cpp  filters.cpp  fsm.cpp  listener.cpp  talker.cpp
pioneer/: stack.xml
pioneer/artoolkit_localization/: CMakeLists.txt  mainpage.dox  manifest.xml
pioneer/artoolkit_localization/cfg/: README  config_file_for_rviz.rviz  lara.map
pioneer/artoolkit_localization/data/: README
pioneer/artoolkit_localization/docs/: README
pioneer/artoolkit_localization/include/artoolkit_localization/: ar_map.h  localization_node.h  ukf.h
pioneer/artoolkit_localization/launch/: README  desktop.launch  joy.launch  robot.launch
pioneer/artoolkit_localization/src/: ar_map.cpp  localization_node.cpp  ukf.cpp
pioneer/artoolkit_localization/test/: README
pioneer/artoolkit_localization/ukf_figama/: main.cpp  prEq.cpp  ukfMed.cpp
requirements/: deploy.txt  pip.txt
sphinx/: configure.ac  configure.in
