<?xml version="1.0"?>
<package>
  <name>fsm</name>
  <version>1.0.0</version>
  <description>The fsm package</description>

  <maintainer email="gabriel.araujo.5000@gmail.com">Gabriel Araujo</maintainer>
  <author email="gabriel.araujo.5000@gmail.com">Gabriel Araujo</author>
  <license>BSD</license>

  <run_depend>message_runtime</run_depend>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>

  <export>
  </export>
</package>
